maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:27: error: not found: value setIndicator
      if(N!=9999 && getIndication(x,y)==9999){setIndicator(x,y,N+1);}
                                              ^ShortestPathMaze:28: error: not found: value setIndicator
      else if(S!=9999 && getIndication(x,y)==9999){setIndicator(x,y,S+1);}
                                                   ^ShortestPathMaze:29: error: not found: value setIndicator
      else if(E!=9999 && getIndication(x,y)==9999){setIndicator(x,y,E+1);}
                                                   ^ShortestPathMaze:30: error: not found: value setIndicator
      else if(W!=9999 && getIndication(x,y)==9999){setIndicator(x,y,W+1);}
                                                   ^