maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
  setIndication(11,5,0)
  ecrire()
}

def ecrire()={

  var N=9999
  var S=9999
  var E=9999
  var W=9999

  for (x<-0 to 11){
    for(y<-0 to 11){

      N=9999
      S=9999
      E=9999
      W=9999

      if((y!=0)&&(!hasTopWall(x,y))){N=getIndication(x,y-1);}
      if((x!=0)&&(!hasLeftWall(x,y))){W=getIndication(x-1,y);}
      if((x!=11)&&(!hasTopWall(x+1,y))){E=getIndication(x+1,y);}
      if((y!=11)&&(!hasTopWall(x,y+1))){S=getIndication(x,y+1);}

      if(N!=9999 && getIndication(x,y)==9999){setIndicator(x,y,N+1);}
      else if(S!=9999 && getIndication(x,y)==9999){setIndicator(x,y,S+1);}
      else if(E!=9999 && getIndication(x,y)==9999){setIndicator(x,y,E+1);}
      else if(W!=9999 && getIndication(x,y)==9999){setIndicator(x,y,W+1);}




    }
  }
}

def end(){

}